add new customer UI

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+.logoColor {
+    background-color: #46afec;
+    color: white;
+}
+
+.confirmBtn{
+    background-color: #46afec;
+    color: white;
+}
