--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -25,7 +25,7 @@
                 <div class="row">
 
                     <div class="col-1 text-right">
-                        <i class='fas fa-user mt-1 ml-3' style="font-size: 21px;"></i>
+                        <i class='fas fa-user mt-1 ml-3' style="font-size: 21px; color: #46afec;"></i>
                     </div>
                     <div class="col-4">
                         <label for="name" class="d-inline label">Customer Name</label>
@@ -54,8 +54,7 @@
                 <br><br><br>
 
                 <div class="row">
-                    <div class="col-6"></div>
-                    <div class="col-5 text-right">
+                    <div class="col-11 text-right">
                         <button type="submit" [disabled]="!customerForm.valid"
                             class="btn confirmBtn border border-dark" routerLink="/home">Save</button>
                     </div>
