--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -71,7 +71,7 @@
                         <p class="required d-inline"> *</p>
                     </div>
                     <div class="col-6">
-                        <select href="#" id="txnType" formControlName="type"
+                        <select href="#" id="txnType" formControlName="txnType"
                             class="dropdown-toggle btn confirmBtn w-100" data-toggle="dropdown" role="button"
                             aria-haspopup="true" aria-expanded="false">Type <span class="caret"></span>
                             <option value="DEBIT">Debit</option>
