--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,7 @@
     <p class="id1" *ngIf="customerCount!=0">You have {{customerCount}} Customers</p>
     <p class="id1" *ngIf="customerCount==0">You have 0 Customers</p>
     <p class="id1" *ngIf="customerCount==0">Start adding new Customers</p>
-    <div class="col-sm" class="text-center"><button type="button" class="btn confirmBtn border-dark rounded p-2"><i
+    <div class="col-sm" class="text-center"><button type="button" class="btn confirmBtn border-dark rounded p-2" [routerLink]="['/addcustomer']"><i
                 class='fa fa-plus'></i>
             <strong> Add New Customer </strong></button>
     </div>
@@ -54,7 +54,7 @@
                             <div class="row">
                                 <div class="col-6">
                                     <input type="submit"
-                                        class="btn btn-square confirmBtn border border-dark rounded p-2"
+                                        class="btn btn-square confirmBtn border border-dark rounded p-2" [routerLink]="['/login']"
                                         data-dismiss="modal" value="Yes" />
                                 </div>
                                 <div class="col-6 text-right">
