--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -7,9 +7,9 @@
                 </h2>
             </div>
             <div class="col-sm-6 ">
-                <button class="btn confirmBtn border border-dark signUpButton"><a style="text-decoration: none; color: white;" 
-                href="https://www.google.com/">SignUp</a>
-            </button>
+                <button class="btn confirmBtn border border-dark signUpButton"><a
+                        style="text-decoration: none; color: white;" href="https://www.google.com/">SignUp</a>
+                </button>
             </div>
         </div>
         <div class="container">
@@ -19,7 +19,9 @@
                         <div class="col-sm-6">
                             <label class="logo" for="UserId">Mobile Number/Email:</label>
                             <div class="col-sm-6">
-                                <input [(ngModel)]="userID" [className]="isValid? 'form-control': 'form-control invalidInput'" type="text" name="uname" required>
+                                <input [(ngModel)]="userID"
+                                    [className]="isValid? 'form-control': 'form-control invalidInput'" type="text"
+                                    name="uname" required>
                             </div>
                         </div>
                     </div>
@@ -27,8 +29,11 @@
                         <div class="col-sm-6 form-group">
                             <label class="logo" for="password">Password:</label>
                             <div class="col-sm-6 inputPass">
-                                <input [(ngModel)]="password" id="password" [className]="isValid? 'form-control': 'form-control invalidInput'" type="password" name="password" required>
-                                <div [className]="isValid? 'valid': 'invalidEntry'"><span style="margin-top: 5px;">Invalid input Id / Password !</span></div>
+                                <input [(ngModel)]="password" id="password"
+                                    [className]="isValid? 'form-control': 'form-control invalidInput'" type="password"
+                                    name="password" required>
+                                <div [className]="isValid? 'valid': 'invalidEntry'"><span
+                                        style="margin-top: 5px;">Invalid input Id / Password !</span></div>
                             </div>
                         </div>
                     </div>
@@ -36,8 +41,10 @@
                         <div class="col-sm-6">
                             <span class="logo"><a href="#">Forgot Password?</a></span>
                             <div class="col-sm-6 inputPass">
-                                <button (click)="login()" type="submit" class=" btn confirmBtn border border-dark loginButton" style="text-decoration: none; color: white;">
-                                  Login
+                                <button (click)="login()" type="submit"
+                                    class=" btn confirmBtn border border-dark loginButton"
+                                    style="text-decoration: none; color: white;">
+                                    Login
                                 </button>
                             </div>
 
@@ -47,3 +54,4 @@
             </div>
         </div>
     </div>
+</div>
