--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -1,57 +1,52 @@
 <div class="container">
     <div class="container1">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <h2 class="logo">
                     <img src="../../assets/image1.png"> Login
                 </h2>
             </div>
-            <div class="col-sm-6 ">
+            <div class="col-sm-6">
                 <button class="btn confirmBtn border border-dark signUpButton"><a
                         style="text-decoration: none; color: white;" href="https://www.google.com/">SignUp</a>
                 </button>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <form ng-submit="login()" class="was-validated">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <label class="logo" for="UserId">Mobile Number/Email:</label>
-                            <div class="col-sm-6">
-                                <input [(ngModel)]="userID"
-                                    [className]="isValid? 'form-control': 'form-control invalidInput'" type="text"
-                                    name="uname" required>
-                            </div>
+        <div class="row">
+            <form ng-submit="login()">
+                <div class="row">
+                    <label class="logo" for="UserId">Mobile Number/Email:</label>
+                    <div class="col-sm-6">
+                        <input [(ngModel)]="userID" [className]="isValid? 'form-control': 'form-control invalidInput'"
+                            type="text" name="uname" required>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-sm-6 form-group">
+                        <label class="logo" for="password">Password:</label>
+                        <div style="margin-left: 160px;" class="inputPass">
+                            <input [(ngModel)]="password" id="password"
+                                [className]="isValid? 'form-control': 'form-control invalidInput'" type="password"
+                                name="password" required>
+                            <div [className]="isValid? 'valid': 'invalidEntry'"><span style="margin-top: 5px;">Invalid
+                                    input Id / Password !</span></div>
                         </div>
                     </div>
-                    <div class="row ">
-                        <div class="col-sm-6 form-group">
-                            <label class="logo" for="password">Password:</label>
-                            <div class="col-sm-6 inputPass">
-                                <input [(ngModel)]="password" id="password"
-                                    [className]="isValid? 'form-control': 'form-control invalidInput'" type="password"
-                                    name="password" required>
-                                <div [className]="isValid? 'valid': 'invalidEntry'"><span
-                                        style="margin-top: 5px;">Invalid input Id / Password !</span></div>
-                            </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12" >
+                        <span class="logo"><a href="#">Forgot Password?</a></span>
+                        <div class="inputPass"> 
+                            <button (click)="login()" type="submit"
+                                class=" btn confirmBtn border border-dark loginButton"
+                                style="text-decoration: none; color: white;">
+                                Login
+                            </button>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <span class="logo"><a href="#">Forgot Password?</a></span>
-                            <div class="col-sm-6 inputPass">
-                                <button (click)="login()" type="submit"
-                                    class=" btn confirmBtn border border-dark loginButton"
-                                    style="text-decoration: none; color: white;">
-                                    Login
-                                </button>
-                            </div>
 
-                        </div>
                     </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
