--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -11,7 +11,7 @@
                     <div class="col-1"></div>
 
                     <div class="col-2">
-                        <img class="logo" src="../../assets/image1.png" alt="logo">
+                        <img class="logo hand"  [routerLink]="['/home']" src="../../assets/image1.png" alt="logo">
                     </div>
 
                     <div class="col-8 text-center mt-2 rounded-circle">
