functionality working properly

--- a/src/app/add-credit/add-credit.component.html
+++ b/src/app/add-credit/add-credit.component.html
@@ -1,19 +1,19 @@
 <div class="container-fluid">
 
-    <div style="height: 150px;"></div>
+    <div style="height: 100px;"></div>
     <div class=" row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
 
-            <div class="row">
+            <div class="row mb-2">
                 <div class="col-2">
                     <img class="logo" src="../../assets/image1.png" alt="logo">
                 </div>
-                <div class="col-8 text-center mt-2 rounded-circle">
+                <div class="col-8 text-center rounded-circle">
                     <h5 class="logoColor border border-dark rounded p-2">
-                        <p>{{borrowerName}}<br>
-                            {{borrowerPhone}} <br>
-                            {{balance}}</p>
+                        {{borrowerName}}<br>
+                        {{borrowerPhone}} <br>
+                        {{balance}}
                     </h5>
                 </div>
             </div>
@@ -38,9 +38,7 @@
                         </button>
                     </div>
                 </div>
-
-                <br>
-                <div id=block style="margin-left: 10%; margin-right: 10%;">
+                <div id="block" style="margin-left: 10%; margin-right: 10%;">
                     <div class="row">
                         <div class="col-3">
                         </div>
