--- a/src/app/home/reports/reports.component.css
+++ b/src/app/home/reports/reports.component.css
@@ -1,18 +1,6 @@
-.red {
-    color: rgb(243, 71, 71);
-}
-
-.green {
-    color: green;
-}
-
 tr:nth-child(even) {
     background-color: #f0ebeb;
 }
-
-td, th {
-    padding: 4px;
-  }
 
 #table-wrapper {
     position: relative;
@@ -30,8 +18,9 @@ td, th {
 
 #table-wrapper table thead th .text {
     position: absolute;
+    top: -20px;
     z-index: 2;
     height: 50px;
     width: 55%;
-    border: 1px solid;
+    border: 1px solid red;
 }
