--- a/src/styles.css
+++ b/src/styles.css
@@ -5,20 +5,24 @@
     color: white;
 }
 
-.confirmBtn{
+.confirmBtn {
     background-color: #46afec;
     color: white;
 }
 
-.hand{
+.hand {
     cursor: pointer;
 }
 
 .mandatory {
-    color: red;   
+    color: red;
 }
 
 .feedback {
     font-size: 12px;
     color: red;
+}
+
+.blue {
+    color: #46afec;
 }
