My Account page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,15 +20,14 @@
         <div class="id2"><img [src]="LOGO3" /><a class="link" href="/home">Reports</a></div>
         <div class="id2 dropdown"><img [src]="LOGO4" /><a class="link dropbtn" href="/home">Profile</a>
             <div class="dropdown-content">
-                <a href="#">My Account</a>
+                <a href="http://localhost:4200/myaccount">My Account</a>
                 <a href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
             </div>
         </div>
     </div>
     <app-customers *ngIf="isOn == false"></app-customers>
     <app-homepage *ngIf="isOn == true"></app-homepage>
-    <div class="col-sm" class="text-center"><button type="button" class="btn confirmBtn border-dark rounded p-2"
-            [routerLink]="['/addcustomer']"><i class='fa fa-plus'></i>
+    <div class="col-sm" class="text-center"><button type="button" class="btn confirmBtn border-dark rounded p-2" [routerLink]="['/addcustomer']"><i class='fa fa-plus'></i>
             <strong> Add New Customer </strong></button>
     </div>
 
@@ -41,14 +40,10 @@
                         <form action="#" method="post">
                             <div class="row">
                                 <div class="col-6">
-                                    <input type="submit"
-                                        class="btn btn-square confirmBtn border border-dark rounded p-2"
-                                        (click)='clearData()' [routerLink]="['/login']" data-dismiss="modal"
-                                        value="Yes" />
+                                    <input type="submit" class="btn btn-square confirmBtn border border-dark rounded p-2" (click)='clearData()' [routerLink]="['/login']" data-dismiss="modal" value="Yes" />
                                 </div>
                                 <div class="col-6 text-right">
-                                    <button class="btn btn-square confirmBtn border border-dark rounded p-2    "
-                                        data-dismiss="modal"> No </button>
+                                    <button class="btn btn-square confirmBtn border border-dark rounded p-2    " data-dismiss="modal"> No </button>
                                 </div>
                             </div>
                         </form>
