--- a/src/app/add-customer/add-customer.component.css
+++ b/src/app/add-customer/add-customer.component.css
@@ -8,6 +8,9 @@
     width: 65px;
 }
 
+.inp {
+    height: 32px;
+}
 .icon {
     background-color: #46afec;
     color: white;
@@ -19,8 +22,9 @@
 }
 
 .selectField {
-background-color: #8dd5ff;
-color: white;
+border: 1px solid #46afec;
+color: rgb(82, 81, 81);
+background-color: white;
 }
 .label {
     font-size: 20px;
