--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -30,7 +30,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-6 inputDiv">
-                        <input class="rounded w-100" [ngClass]="{'invalid' : isValid('name')}" formControlName="name"
+                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('name')}" formControlName="name"
                             type="text" id="name" placeholder="Name" required>
                         <div class="feedback" *ngIf="isValid('name')">
                             <span *ngIf="customerForm.controls.name.errors.required">Field cannot be Empty!!!</span>
@@ -47,7 +47,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-6 inputDiv">
-                        <input class="rounded w-100" [ngClass]="{'invalid' : isValid('mobile') || isPresent}"
+                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('mobile') || isPresent}"
                             type="number" pattern="[+0-9]{10}" id="contact" placeholder="Mobile No."
                             formControlName="mobile">
                         <div *ngIf="isPresent" class="feedback">Number Already Exists!!! Please use different number
@@ -67,7 +67,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-6 inputDiv">
-                        <input class="rounded w-100" [ngClass]="{'invalid' : isValid('amount')}"
+                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('amount')}"
                             formControlName="amount" minlength="1" type="number" id="amount" placeholder="Amount"
                             required>
                         <div class="feedback" *ngIf="isValid('amount')">
@@ -84,11 +84,11 @@
                     </div>
                     <div class="col-6">
                         <select href="#" id="txnType" formControlName="txnType"
-                            class="dropdown-toggle selectField btn w-100" data-toggle="dropdown" role="button"
-                            aria-haspopup="true" aria-expanded="false" required><span class="caret">Type</span>
-                            <option value="none" selected disabled> 
-                                Select an Option 
-                            </option> 
+                            class="dropdown-toggle inp selectField btn w-100" data-toggle="dropdown" role="button"
+                            aria-haspopup="true" aria-expanded="false" required>
+                            <option value="" disabled selected>
+                                Select an Option
+                            </option>
                             <option value="DEBIT">Debit</option>
                             <option value="CREDIT">Credit</option>
                         </select>
@@ -101,21 +101,10 @@
                 <div class="row">
                     <div class="col-11 text-right">
                         <button type="submit" [disabled]="!customerForm.valid"
-                            class="btn confirmBtn border border-dark nav-item nav-link-edit" data-toggle="modal"
-                            data-target="#successModal">Save</button>
+                            class="btn confirmBtn border border-dark nav-item nav-link-edit">Save</button>
                     </div>
                 </div>
             </form>
-        </div>
-        <div class="modal centered" id="successModal" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog modal-sm">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <p class="text-center">Successfully Added<br /></p>
-                        
-                    </div>
-                </div>
-            </div>
         </div>
         <div class="col-sm-2"></div>
     </div>
