--- a/src/app/add-credit/add-credit.component.html
+++ b/src/app/add-credit/add-credit.component.html
@@ -12,8 +12,8 @@
                 <div class="col-8 text-center rounded-circle">
                     <h5 class="logoColor border border-dark rounded p-2">
                         {{borrowerName}}<br>
-                        {{borrowerPhone}} <br>
-                        {{balance}}
+                        <i class="material-icons icon">phone</i>  {{borrowerPhone}} <br>
+                        <i class='fas fa-rupee-sign icon'></i>  {{balance}}
                     </h5>
                 </div>
             </div>
